Use animation fill mode and animation delay

--- a/mario-example/style.css
+++ b/mario-example/style.css
@@ -43,11 +43,13 @@ html, body {
     left: 0;
     animation-name: drive;
     animation-duration: 3s;
+    animation-fill-mode: forwards;
+    animation-delay: 2s;
 }
 
 /* keyframes */
 @keyframes drive {
     from { transform: translateX(0)}
-    to { transform: translateX(1500px)}
+    to { transform: translateX(1150px)}
 }
 
