Animation short-hand

--- a/mario-example/style.css
+++ b/mario-example/style.css
@@ -46,7 +46,7 @@ html, body {
     animation-fill-mode: forwards;
     /* animation-delay: 2s; */
     animation-iteration-count: infinite;
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275); /* common value ease, linear, ease-in, ease-out, ease-in-out */
+    animation-timing-function: linear; /* common value ease, linear, ease-in, ease-out, ease-in-out */
 }
 
 .luigi {
@@ -56,7 +56,25 @@ html, body {
     animation-duration: 5s;
     animation-fill-mode: both;
     animation-iteration-count: infinite;
-    animation-direction: reverse;
+    animation-direction: normal;
+    animation-timing-function: linear;
+}
+
+.cloud {
+    position: absolute;
+}
+
+.cloud:nth-child(1) {
+    width: 200px;
+    top: 70px;
+    opacity: 0.5;
+    animation: wind 80s linear infinite reverse;
+}
+
+.cloud:nth-child(2) {
+    width: 300px;
+    top: -50;
+    animation: wind 50s linear infinite reverse;
 }
 
 /* keyframes */
@@ -65,3 +83,7 @@ html, body {
     to { transform: translateX(1300px)}
 }
 
+@keyframes wind {
+    from { left: -300px; }
+    to { left: 100%; }
+}
